--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi tarjeta de presentacion</title>
+    <style>
+        body {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+margin: 0;
+background-color: #f0f0f0;
+}
+.tarjeta {
+background-color: #fff;
+border: 2px solid #ddd;
+padding: 20px;
+width: 300px;
+text-align: center;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+tarjeta p {
+color: #333;
+font-family: Arial, sans-serif;
+margin: 10px 0;
+}
+
+    </style>
 </head>
 <body>
+    <div class="tarjeta">
     <h1>Mi tarjeta de presentacion</h1>
     <p>Nombre:Lujan </p>
     <p>profecion:prosimamente desarrolladora de paginas web</p>
