--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@ justify-content: center;
 align-items: center;
 height: 100vh;
 margin: 0;
-background-color: #f0f0f0;
+background-color: #3889f3;
 }
 .tarjeta {
-background-color: #fff;
-border: 2px solid #ddd;
+background-color: #eaf0ef;
+border: 2px solid #a996f0;
 padding: 20px;
 width: 300px;
 text-align: center;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+box-shadow: 0 0 10px rgba(4, 7, 41, 0.1);
 }
-tarjeta p {
-color: #333;
+.tarjeta p {
+color: #02057c;
 font-family: Arial, sans-serif;
 margin: 10px 0;
 }
