--- a/demostracion.html
+++ b/demostracion.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>demostracion de elementos de html</title>
-
+    <title>Formateo y Organización</title>
 </head>
-
 <body>
     <header>
-        <h1>Mi proyecto web</h1>
+        <h1>Mi Proyecto Web</h1>
     </header>
+
     <section>
-        <h2> introduccion</h2>
-        <p>es una demostracion<strong>muy importante </strong>de ver ll
-        html para <em>formatear</em>y organisar contenido</p>
+        <h2>Introducción</h2>
+        <p>Este proyecto es una <strong>demostración</strong> de cómo utilizar HTML para <em>formatear</em> y organizar contenido.</p>
     </section>
 
-<section>
-  <h2>codigo de ejemplo</h2>
-   <p>para escribir elementos <code>&lt;code&gt;</code></code>
-   para resaltar elementos del codigo</p>
-  <blockquote>
-    <p>"html se usa mucho </p>
-
-  </blockquote>
-    </section>
     <section>
-        <h2>organizacion</h2>
+        <h2>Código de Ejemplo</h2>
+        <p>Para escribir código HTML, utiliza la etiqueta <code>&lt;code&gt;</code> para resaltar fragmentos de código.</p>
+        <blockquote>
+            <p>"HTML es el lenguaje básico para construir páginas web."</p>
+        </blockquote>
+    </section>
+
+    <section>
+        <h2>Organización</h2>
         <div>
-            <h3>bloque de contenido</h3>
-            <p>el conteneido dentro de <code>&lt;div&lt;</code>se puede agrupar  y estilisar en bloque</p>
+            <h3>Bloque de Contenido</h3>
+            <p>El contenido dentro de un <code>&lt;div&gt;</code> se puede agrupar y estilizar en bloque.</p>
         </div>
-        <p>dentro del parrafo se puede usar <span style="font-weight: bold;"></span></p>
-</section>
-
+        <p>Dentro de un párrafo, puedes usar <span style="font-weight: bold;">etiquetas de formato</span> para mejorar la presentación.</p>
+    </section>
 </body>
 </html>
