--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="profile-photo">
-        <img src="img\lujan.jpg" alt="lujan"></div>
+        <img src="lujan.jpg" alt="lujan"></div>
     <h1>lujan Espinoza</h1>
     <div class="section">
         <h2>Experiencia Laboral</h2>
